--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://xdd-dbx.github.io/cloudssystems/",
 	"name": "cloudssystems",
 	"private": true,
 	"version": "1.1.2",
@@ -11,6 +12,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
+		"deploy": "gh-pages -d build",
 		"start": "vite build && vite preview --port 4173"
 	},
 	"devDependencies": {
@@ -22,6 +24,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.6.7",
+		"gh-pages": "^6.1.1",
 		"swiper": "^11.0.7"
 	}
 }
